--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -7,7 +7,13 @@ $main_color: #8bb752;
 body{
   background: #FCFCFD;
 }
-
+.phone-input-wrapper{
+  position: relative;
+  z-index: 900;
+  .mat-mdc-text-field-wrapper{
+    z-index: 999;
+  }
+}
 .mdc-button {
   height: auto !important;
   min-height: 36px;
